--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/BoggleScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/BoggleScreen.fxml
@@ -49,5 +49,7 @@
       <Separator layoutX="70.0" layoutY="142.0" prefHeight="3.0" prefWidth="186.0" />
       <Label layoutX="520.0" layoutY="22.0" text="Timer" />
       <Label layoutX="40.0" layoutY="22.0" text="Player Name" />
+      <Label layoutX="9.0" layoutY="66.0" text="Total Score:" />
+      <Label layoutX="78.0" layoutY="67.0" text="0" />
    </children>
 </AnchorPane>
