--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/GameTypeScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/GameTypeScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
    <children>
       <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
@@ -15,6 +15,6 @@
          </font>
       </Text>
       <Button layoutX="242.0" layoutY="129.0" mnemonicParsing="false" onAction="#singlePlay" prefHeight="55.0" prefWidth="115.0" text="Single Player" />
-      <Button layoutX="242.0" layoutY="226.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="115.0" text="Mutli-Player" />
+      <Button layoutX="242.0" layoutY="226.0" mnemonicParsing="false" onAction="#multiPlay" prefHeight="55.0" prefWidth="115.0" text="Mutli-Player" />
    </children>
 </AnchorPane>
