screen to ask if player is a host or client, completed timer functionality

--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/BoggleScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/BoggleScreen.fxml
@@ -21,9 +21,9 @@
          </font>
       </Text>
       <ListView fx:id="wordViewer" layoutX="362.0" layoutY="75.0" prefHeight="270.0" prefWidth="227.0" />
-      <TextField fx:id="playerInput" layoutX="362.0" layoutY="345.0" onAction="#submitWord" />
-      <Button layoutX="511.0" layoutY="345.0" mnemonicParsing="false" onAction="#submitWord" prefHeight="26.0" prefWidth="79.0" text="Submit" />
-      <Label layoutX="520.0" layoutY="22.0" text="Timer" />
+      <TextField fx:id="playerInput1" layoutX="362.0" layoutY="345.0" onAction="#submitWord" />
+      <Button fx:id="playerInput2" layoutX="511.0" layoutY="345.0" mnemonicParsing="false" onAction="#submitWord" prefHeight="26.0" prefWidth="79.0" text="Submit" />
+      <Label fx:id="timer" layoutX="520.0" layoutY="22.0" text="180 seconds" />
       <Label fx:id="playname" layoutX="40.0" layoutY="22.0" text="Player Name" />
       <Label layoutX="9.0" layoutY="66.0" text="Total Score:" />
       <Label layoutX="78.0" layoutY="67.0" text="0" />
