--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/ConnectScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/ConnectScreen.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -15,22 +14,12 @@
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <Label layoutX="232.0" layoutY="76.0" text="Game Ended" textAlignment="CENTER">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Button layoutX="362.0" layoutY="256.0" mnemonicParsing="false" onAction="#newPlay" prefHeight="46.0" prefWidth="106.0" text="New Game" />
-      <Button layoutX="133.0" layoutY="256.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="46.0" prefWidth="98.0" text="Exit" />
-      <Label layoutX="244.0" layoutY="139.0" text="Your Score:" textAlignment="CENTER">
-         <font>
-            <Font size="21.0" />
-         </font>
-      </Label>
-      <Label fx:id="PlayerScore" layoutX="274.0" layoutY="178.0" text="Score">
+      <Button fx:id="Client" layoutX="247.0" layoutY="235.0" mnemonicParsing="false" onAction="#connectPlay" prefHeight="46.0" prefWidth="106.0" text="Client" />
+      <Button fx:id="Host" layoutX="247.0" layoutY="151.0" mnemonicParsing="false" onAction="#connectPlay" prefHeight="46.0" prefWidth="106.0" text="Host" />
+      <Text layoutX="179.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What Are You Connecting As?" wrappingWidth="240.149169921875">
          <font>
             <Font size="18.0" />
          </font>
-      </Label>
+      </Text>
    </children>
 </AnchorPane>
