--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/BoggleScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/BoggleScreen.fxml
@@ -14,49 +14,97 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.BoggleScreenController">
    <children>
-      <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Line endX="500" endY="0" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
          <font>
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
       <ListView fx:id="wordViewer" layoutX="362.0" layoutY="75.0" prefHeight="270.0" prefWidth="227.0" />
-      <TextField fx:id="playerInput1" layoutX="362.0" layoutY="345.0" onAction="#submitWord" />
-      <Button fx:id="playerInput2" layoutX="511.0" layoutY="345.0" mnemonicParsing="false" onAction="#submitWord" prefHeight="26.0" prefWidth="79.0" text="Submit" />
-      <Label fx:id="timer" layoutX="520.0" layoutY="22.0" text="180 seconds" />
-      <Label fx:id="playname" layoutX="40.0" layoutY="22.0" text="Player Name" />
-      <Label layoutX="9.0" layoutY="66.0" text="Total Score:" />
-      <Label layoutX="78.0" layoutY="67.0" text="0" />
-      <GridPane layoutX="65.0" layoutY="141.0" prefHeight="152.0" prefWidth="214.0">
+      <TextField fx:id="playerInput1" layoutX="362.0" layoutY="345.0" onAction="#submitWord" prefHeight="26.0" prefWidth="146.0" promptText="Enter Words Here" />
+      <Button fx:id="playerInput2" layoutX="510.0" layoutY="345.0" mnemonicParsing="false" onAction="#submitWord" prefHeight="26.0" prefWidth="79.0" text="Submit" />
+      <Label fx:id="timer" layoutX="503.0" layoutY="22.0" text="180 seconds" textAlignment="RIGHT" />
+      <Label fx:id="playname" layoutX="14.0" layoutY="22.0" text="Player Name" />
+      <Label layoutX="14.0" layoutY="67.0" text="Total Score" />
+      <Label layoutX="94.0" layoutY="67.0" text="0" />
+      <GridPane alignment="CENTER" gridLinesVisible="true" layoutX="42.0" layoutY="103.0" maxHeight="250.0" maxWidth="250.0" minHeight="250.0" minWidth="250.0" prefHeight="250.0" prefWidth="250.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.4000244140625" minWidth="10.0" prefWidth="107.79998779296875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.4000244140625" minWidth="10.0" prefWidth="107.79998779296875" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.4000244140625" minWidth="10.0" prefWidth="107.79998779296875" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.20001220703125" minWidth="10.0" prefWidth="98.20001220703125" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="62.5" minWidth="62.5" prefWidth="62.5" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="62.5" minWidth="62.5" prefWidth="62.5" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="62.5" minWidth="62.5" prefWidth="62.5" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="62.5" minWidth="62.5" prefWidth="62.5" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="62.5" minHeight="62.5" prefHeight="62.5" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="62.5" minHeight="62.5" prefHeight="62.5" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="62.5" minHeight="62.5" prefHeight="62.5" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="62.5" minHeight="62.5" prefHeight="62.5" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="lbl0" prefHeight="33.0" prefWidth="35.0" text="Label" />
-            <Label fx:id="lbl1" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="1" />
-            <Label fx:id="lbl2" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="2" />
-            <Label fx:id="lbl3" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="3" />
-            <Label fx:id="lbl4" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.rowIndex="1" />
-            <Label fx:id="lbl5" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="lbl6" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="lbl7" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <Label fx:id="lbl8" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.rowIndex="2" />
-            <Label fx:id="lbl9" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="lbl10" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Label fx:id="lbl11" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <Label fx:id="lbl12" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.rowIndex="3" />
-            <Label fx:id="lbl13" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label fx:id="lbl14" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Label fx:id="lbl15" prefHeight="33.0" prefWidth="35.0" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label fx:id="lbl0" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="A" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl1" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="B" textAlignment="CENTER" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl2" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="C" textAlignment="CENTER" GridPane.columnIndex="2">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl3" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="D" textAlignment="CENTER" GridPane.columnIndex="3">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl4" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="E" textAlignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl5" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="F" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl6" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="G" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl7" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="H" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl8" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="I" textAlignment="CENTER" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl9" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="J" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl10" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="K" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl11" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="L" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl12" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="M" textAlignment="CENTER" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl13" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="N" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl14" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="O" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <Label fx:id="lbl15" alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="35.0" text="Qu" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
          </children>
       </GridPane>
    </children>
