--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/EndScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/EndScreen.fxml
@@ -27,7 +27,7 @@
             <Font size="21.0" />
          </font>
       </Label>
-      <Label fx:id="PlayerScore" layoutX="274.0" layoutY="178.0" style="-fx-alignment: center;" text="Score">
+      <Label fx:id="PlayerScore" layoutX="291.0" layoutY="176.0" style="-fx-alignment: center;" text="0">
          <font>
             <Font size="18.0" />
          </font>
