Minor Screen changes

--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/MultiScoreScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/MultiScoreScreen.fxml
@@ -20,8 +20,8 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <ListView layoutX="210.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button layoutX="172.0" layoutY="324.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="51.0" text="Exit" />
+      <ListView fx:id="multiScoreList" layoutX="210.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="172.0" layoutY="324.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="26.0" prefWidth="51.0" text="Exit" />
       <Button layoutX="380.0" layoutY="324.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="Play Again" />
    </children>
 </AnchorPane>
