--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ClientConnectingScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ClientConnectingScreen.fxml
@@ -41,5 +41,6 @@
          </font>
       </Label>
       <TextField fx:id="portNumber" layoutX="226.0" layoutY="266.0" />
+      <Label fx:id="portNumLabel" layoutX="220.0" layoutY="292.0" text="Please Enter The Port Number" textAlignment="CENTER" textFill="RED" visible="false" />
    </children>
 </AnchorPane>
