--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/InitialWaitingScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/InitialWaitingScreen.fxml
@@ -19,7 +19,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Label fx:id="IPAdress" layoutX="264.0" layoutY="126.0" text="123.456.7890" />
+      <Label fx:id="IPAddress" layoutX="264.0" layoutY="126.0" text="123.456.7890" />
       <Text layoutX="249.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Port Number">
          <font>
             <Font size="18.0" />
