--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostWaitScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostWaitScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.EndScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.HostWaitScreenController">
    <children>
       <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
@@ -19,7 +19,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Label fx:id="IPAddress" layoutX="264.0" layoutY="126.0" text="123.456.7890" />
+      <Label fx:id="IPAddress" layoutX="264.0" layoutY="126.0" text="123.456.789" />
       <Text layoutX="249.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Port Number">
          <font>
             <Font size="18.0" />
