Redid client connect screen so that it first tries to connect before asking for player name. Also grabs error on failure. Validates inputs as well via regex

--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostConnectingScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostConnectingScreen.fxml
@@ -26,7 +26,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="PlayerName" layoutX="220.0" layoutY="152.0" prefHeight="27.0" prefWidth="159.0" />
+      <TextField fx:id="playerNameField" layoutX="220.0" layoutY="152.0" prefHeight="27.0" prefWidth="159.0" />
       <Label layoutX="210.0" layoutY="204.0" text="Enter The Number Of Players">
          <font>
             <Font size="14.0" />
