--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ClientConnectingScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ClientConnectingScreen.fxml
@@ -1,46 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
+<GridPane alignment="CENTER" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController" xmlns:fx="http://javafx.com/fxml/1">
+  <columnConstraints>
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
-         <font>
-            <Font name="Comic Sans MS" size="24.0" />
-         </font>
-      </Text>
-      <Button layoutX="239.0" layoutY="324.0" mnemonicParsing="false" onAction="#gamePlayClient" prefHeight="42.0" prefWidth="114.0" text="Start Game">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Label layoutX="247.0" layoutY="81.0" text="Enter Your Name">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="PlayerName" layoutX="226.0" layoutY="101.0" prefHeight="27.0" prefWidth="143.0" />
-      <Label layoutX="231.0" layoutY="166.0" text="Enter The I.P Address">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="ipAddress" layoutX="228.0" layoutY="186.0" prefHeight="27.0" prefWidth="143.0" />
-      <Label fx:id="nameErrorClient" layoutX="241.0" layoutY="130.0" text="Please Enter A Name" textFill="RED" visible="false" />
-      <Label fx:id="IPAddressError" layoutX="223.0" layoutY="214.0" text="Please Enter The IP Address" textFill="RED" visible="false" />
-      <Label layoutX="226.0" layoutY="246.0" text="Enter The Port Number">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="portNumber" layoutX="226.0" layoutY="266.0" />
-      <Label fx:id="portNumLabel" layoutX="220.0" layoutY="292.0" text="Please Enter The Port Number" textAlignment="CENTER" textFill="RED" visible="false" />
+      <VBox alignment="CENTER" spacing="10.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font>
+            </Text>
+            <Line endX="600.0" VBox.vgrow="ALWAYS" />
+         </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </VBox>
+      <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.rowIndex="1">
+         <children>
+            <Label text="IP Address" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="ipAddressField" promptText="255.255.255.255" />
+            <Label fx:id="ipErrorLabel" text="Please enter a valid IP address" textAlignment="CENTER" textFill="FIREBRICK" visible="false" />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.rowIndex="2">
+         <children>
+            <Label text="Port" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="portField" promptText="65535" />
+            <Label fx:id="portErrorLabel" text="Please enter a valid port number" textAlignment="CENTER" textFill="FIREBRICK" visible="false" />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.rowIndex="3">
+         <children>
+            <Button onAction="#gamePlayClient" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Connect" textAlignment="CENTER" >
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Button>
+            <Label fx:id="spinner" text="" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="30.0" />
+               </GridPane.margin>
+            </Label>
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</GridPane>
