--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostWaitScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/HostWaitScreen.fxml
@@ -1,35 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.HostWaitScreenController">
+
+<GridPane alignment="CENTER" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.HostWaitScreenController">
+   <columnConstraints>
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
-         <font>
-            <Font name="Comic Sans MS" size="24.0" />
-         </font>
-      </Text>
-      <Text layoutX="254.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="I.P. Address">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Label fx:id="IPAddress" layoutX="264.0" layoutY="126.0" text="123.456.789" />
-      <Text layoutX="249.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Port Number">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Label fx:id="portNumber" layoutX="295.0" layoutY="191.0" text="6" />
-      <Text layoutX="184.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting For Other Players to Connect">
+      <VBox alignment="CENTER" spacing="10.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font>
+            </Text>
+            <Line endX="499.29290771484375" endY="7.62939453125E-6" startX="-100.0" />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" spacing="10.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I.P. Address">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Label fx:id="IPAddress" text="123.456.789">
+               <font>
+                  <Font name="Arial" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" spacing="10.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Port Number">
+               <font>
+                  <Font name="Arial" size="18.0" />
+               </font>
+            </Text>
+            <Label fx:id="portNumber" text="12345">
+               <font>
+                  <Font name="Arial" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting For Other Players to Connect" GridPane.rowIndex="3">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
+      <Button fx:id="startGameButt" mnemonicParsing="false" onAction="#startGame" prefHeight="50.0" text="Start Game" visible="false" GridPane.rowIndex="3">
+         <font>
+            <Font name="Arial" size="16.0" />
+         </font>
+      </Button>
    </children>
-</AnchorPane>
+</GridPane>
