--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/SinglePlayerScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/SinglePlayerScreen.fxml
@@ -3,33 +3,62 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
+
+<GridPane alignment="CENTER" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
-         <font>
-            <Font name="Comic Sans MS" size="24.0" />
-         </font>
-      </Text>
-      <Button layoutX="243.0" layoutY="261.0" mnemonicParsing="false" onAction="#gamePlay" prefHeight="42.0" prefWidth="114.0" text="Start Game">
-         <font>
-            <Font size="14.0" />
-         </font></Button>
-      <Label layoutX="247.0" layoutY="122.0" text="Enter Your Name">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="playerNameField" layoutX="220.0" layoutY="154.0" prefHeight="27.0" prefWidth="159.0" />
-      <Label fx:id="nameError" layoutX="254.0" layoutY="186.0" text="Please Enter A Name" textAlignment="CENTER" textFill="#cd0909" visible="false">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Label>
+      <VBox alignment="CENTER" spacing="10.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font>
+            </Text>
+            <Line startX="600.0" />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" fillWidth="false" spacing="10.0" GridPane.rowIndex="1">
+         <children>
+            <Label text="Enter Your Name">
+               <font>
+                  <Font name="Arial" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="playerNameField" promptText="Name">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </TextField>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" spacing="10.0" GridPane.rowIndex="2">
+         <children>
+            <Button fx:id="clientStartGameButt" mnemonicParsing="false" onAction="#clientTryName" prefHeight="42.0" prefWidth="114.0" text="Start Game">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Label fx:id="nameError" textAlignment="CENTER" textFill="FIREBRICK" visible="false">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</GridPane>
