--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/BoggleScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/BoggleScreen.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.BoggleScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.BoggleScreenController">
    <children>
       <Line endX="500" endY="0" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
@@ -26,8 +26,7 @@
       <Label fx:id="timer" layoutX="503.0" layoutY="22.0" text="180 seconds" textAlignment="RIGHT" />
       <Label fx:id="playname" layoutX="14.0" layoutY="22.0" text="Player Name" />
       <Label layoutX="14.0" layoutY="67.0" text="Total Score" />
-      <Label layoutX="94.0" layoutY="67.0" text="0" />
-      <Button fx:id="results" layoutX="120.0" layoutY="364.0" mnemonicParsing="false" onAction="#seeResults" visible="false" text="See Results" textAlignment="CENTER" />
+      <Label fx:id="totalScore" layoutX="94.0" layoutY="67.0" text="0" />
       <GridPane alignment="CENTER" gridLinesVisible="true" layoutX="42.0" layoutY="103.0" maxHeight="250.0" maxWidth="250.0" minHeight="250.0" minWidth="250.0" prefHeight="250.0" prefWidth="250.0">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="62.5" minWidth="62.5" prefWidth="62.5" />
